[package]
name = "smol-axum"
version = "0.1.0"
edition = "2021"
authors = ["John Nunley <dev@notgull.net>"]
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://codeberg.org/notgull/smol-axum"
homepage = "https://codeberg.org/notgull/smol-axum"
description = "Integrations between `smol` and `axum`"
keywords = ["futures", "concurrency", "http"]
categories = ["asynchronous", "concurrency"]
exclude = ["/.*"]

[dependencies]
async-executor = "1.11.0"
async-io = "2.3.2"
async-net = { version = "2.0.0", optional = true }
axum-core = { version = "0.5.2", default-features = false }
futures-lite = { version = "2.3.0", default-features = false, features = ["std"] }
http = "1.1.0"
hyper = { version = "1.3.1", default-features = false, features = ["server"] }
hyper-util = { version = "0.1.2", default-features = false, features = ["server", "server-auto"] }
pin-project-lite = "0.2.13"
smol-hyper = "0.1.1"
tower-service = { version = "0.3.2", default-features = false }
tracing = { version = "0.1.40", default-features = false }

[features]
default = ["http1", "http2"]
http1 = ["hyper/http1", "hyper-util/http1"]
http2 = ["hyper/http2", "hyper-util/http2"]

[dev-dependencies]
axum = { version = "0.8.3", default-features = false }
macro_rules_attribute = "0.2.0"
smol-macros = "0.1.0"
